<resources>
    <string name="app_name">Wira Buana - Cyber School</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_url">baseUrl</string>
    <string name="kehadiran">Kehadiran</string>
    <string name="nilai">Nilai</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="report">Report</string>
    <string name="reward">Reward</string>
    <string name="ekskul">Ekskul</string>
    <string name="pelajaran">Pelajaran</string>

    <string name="subtitle_kehadiran">Kehadiran Akademik</string>
    <string name="subtitle_nilai">Nilai Akademik</string>
    <string name="subtitle_pembayaran">Status Pembayaran</string>
    <string name="subtitle_report">Laporan Akademik</string>
    <string name="subtitle_jadwal">Jadwal Akademik</string>
    <string name="subtitle_reward">Prestasi Akademik</string>
    <string name="title_activity_login">Sign in</string>
    <string name="tahun_pelajaran">Tahun Pelajaran</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="nis">NIS</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>
    <string name="riwayat_terakhir">Riwayat Terakhir</string>
    <string name="hadir">Hadir</string>
    <string name="status">Status</string>
    <string name="keamanan">Keamanan</string>
    <string name="kebersihan">Kebersihan</string>
    <string name="praktikum">Praktikum</string>
    <string name="laundry">Laundry</string>
    <string name="perbulan">Perbulan</string>
    <string name="persemester">Persemester</string>
    <string name="tunggal">Tunggal</string>
    <string name="total_tunggakan">Total Tunggakan :</string>

    <string name="keterangan">Keterangan</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="account">Account</string>
    <string name="about">Tentang</string>
    <string name="setting">Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="pembangunan">Pembangunan</string>
    <string name="biaya_uas">Biaya UAS</string>
    <string name="administrasi_perpustakaan">Administrasi Perpustakaan</string>

    <string name="logout_alert">Apakah anda akan logout ?</string>
    <string name="sikap">Sikap</string>
    <string name="keterampilan">Keterampilan</string>
    <string name="dummy_user">Dummy User</string>
    <string name="favorite">Favorite</string>
    <string name="pribadi">Pribadi</string>
    <string name="orang_tua">Orang Tua</string>
    <string name="nis_">NIS :</string>
    <string name="nisn">NISN :</string>
    <string name="nama">Nama :</string>
    <string name="tempat_tanggal_lahir">Tempat, Tanggal Lahir :</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="alamat">Alamat :</string>
    <string name="agama">Agama :</string>
    <string name="status_keluarga">Status Keluarga :</string>
    <string name="nama_ayah">Nama Ayah :</string>
    <string name="nama_ibu">Nama Ibu :</string>
    <string name="kontak">Kontak :</string>
    <string name="profile_image">Profile Image</string>
    <string name="loading">Loading…</string>
    <string name="status_kehadiran">Status Kehadiran :</string>
    <string name="mata_pelajaran">Mata Pelajaran </string>
    <string name="tidak_ada_jadwal">Tidak Ada Jadual</string>
    <string name="menu">Menu</string>
    <string name="informasi">Informasi</string>
    <string name="jadual">Jadual</string>
    <string name="teman">Teman</string>
    <string name="guru">Guru</string>
    <string name="cari_guru">Cari Guru</string>
    <string name="idKelas">idKelas</string>
    <string name="kelas">kelas</string>
    <string name="hak_akses">hakAkses</string>
</resources>
